# sqlguard

./: Cargo.toml  Makefile  README.md  injectdb.pyi  pyproject.toml  sqlguard.pyi
.github/workflows/: auto-merge.yml  ci.yml  codeql.yml  dependecy-review.yml  release.yml
src/: lib.rs
src/patterns/: abstracts.rs  mod.rs
tests/: test_main.py  test_main.rs  test_wild.rs
tests/data/: README.md
